[package]
name = "modify-url"
version = "0.1.0"
authors = ["suborbiral <connorjhicks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"]}